@@ -70,7 +70,13 @@ Deprecated
 - ``logbook.concurrency.new_fine_grained_lock``.
 - The ``compression`` extra. Replace ``Logbook[compression]`` with
   ``Logbook[brotli]`` if you are using ``BrotliCompressionHandler``
-- ``Logger.warn``. Use ``Logger.warning`` instead.
+- :meth:`Logger.warn <logbook.Logger.warn>`. Use
+  :meth:`Logger.warning <logbook.Logger.warning>` instead.
+- :class:`logbook.notifiers.GrowlHandler`
+- :class:`logbook.notifiers.BoxcarHandler`
+- :class:`logbook.notifiers.NotifoHandler`
+- :class:`logbook.more.TwitterHandler`
+- ``logbook.more.TwitterFormatter``
 
 Fixed
 ~~~~~
